--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.Light">
-        <activity android:name=".splash"
+        <activity
+            android:name=".Splash"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,9 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".Login"></activity>
-        <activity android:name=".Home"></activity>
+        <activity android:name=".Login" />
+        <activity android:name=".Home" />
+        <activity android:name=".MyProfile" />
+        <activity android:name=".Holidays"></activity>
     </application>
 
 </manifest>
