--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".Login" />
         <activity android:name=".Home" />
         <activity android:name=".MyProfile" />
-        <activity android:name=".Holidays"></activity>
+        <activity android:name=".Holidays" />
+        <activity android:name=".PerformanceDetails"></activity>
     </application>
 
 </manifest>
