--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,20 @@
         android:theme="@style/AppTheme.Light">
         <activity
             android:name=".Splash"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Login" />
+        <activity
+            android:name=".Login"
+            android:noHistory="true" />
         <activity android:name=".Home" />
         <activity android:name=".MyProfile" />
         <activity android:name=".Holidays" />
-        <activity android:name=".PerformanceDetails"></activity>
+        <activity android:name=".PerformanceDetails" />
     </application>
 
 </manifest>
